# secai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.out
src/sec_ai/classification/: BalancedVideoDataset.py  PackPathway.py  VideoDataset.py  config_resnet50.yaml  settings.py  train.py  trainer.py
src/sec_ai/detection/: coco_dataset.py  data.yaml  infer_on_webcam0.py  train.py  train_one_epoch.py
src/sec_ai/tensorboard_dir/: events.out.tfevents.1697383752.ip-172-31-27-191.57618.0  events.out.tfevents.1697383841.ip-172-31-27-191.57883.0  events.out.tfevents.1697383896.ip-172-31-27-191.58127.0  events.out.tfevents.1697384001.ip-172-31-27-191.58402.0  events.out.tfevents.1697384042.ip-172-31-27-191.58642.0  events.out.tfevents.1697384167.ip-172-31-27-191.58990.0  events.out.tfevents.1697384354.ip-172-31-27-191.59361.0  events.out.tfevents.1697384792.ip-172-31-27-191.63807.0  events.out.tfevents.1697385097.ip-172-31-27-191.67033.0  events.out.tfevents.1697385229.ip-172-31-27-191.68431.0  events.out.tfevents.1697385471.ip-172-31-27-191.71081.0  events.out.tfevents.1697385598.ip-172-31-27-191.73012.0  events.out.tfevents.1697385680.ip-172-31-27-191.74213.0  events.out.tfevents.1697386351.ip-172-31-27-191.80059.0  events.out.tfevents.1697386893.ip-172-31-27-191.85482.0  events.out.tfevents.1697387174.ip-172-31-27-191.90165.0
src/sec_ai/tensorboard_dir2/: events.out.tfevents.1697988029.ip-172-31-27-191.76524.0  events.out.tfevents.1697988270.ip-172-31-27-191.78706.0  events.out.tfevents.1698018840.ip-172-31-27-191.367867.0  (+18 more)
